# parking_system

./: .gitignore  CHANGELOG.md  Config.py  README.md  Tracking.py  docker-compose.yml  package-lock.json  pred_prac_extracted.txt  vehicle_bytetrack_conf.yaml
FeaturesModule/: FeaturesManager.py  (+1 more)
backend/auth_service/: .env  Dockerfile  pyproject.toml
backend/auth_service/src/: main.py
backend/auth_service/src/core/security/: token_handler.py
backend/auth_service/src/dao/: __init__.py  baseDAO.py  permissionDAO.py  tokensDAO.py  userDAO.py
backend/auth_service/src/database/: base.py
backend/auth_service/src/models/: __init__.py  permissions.py  user_permissions.py  users.py
backend/auth_service/src/models/tokens/: refresh_tokens.py  stateful_tokens.py
backend/auth_service/src/routers/: __init__.py  auth_router.py  user_router.py
backend/auth_service/src/schemas/: enums.py  user_schemas.py
backend/auth_service/src/services/: auth_service.py  bootstrap.py  token_service.py  user_service.py
backend/auth_service/src/settings/: config.py
backend/auth_service/src/utils/: __init__.py  dependencies.py
backend/cv-processing-service/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/cv-processing-service/src/: main.py
backend/cv-processing-service/src/api/brokers/: cv_event_broker.py
backend/cv-processing-service/src/api/clients/: parking_management_client.py
backend/cv-processing-service/src/api/repositories/: cv_job_repository.py
backend/cv-processing-service/src/api/routers/: cv_job_router.py  integration_router.py  markup_router.py  monitoring_router.py
backend/cv-processing-service/src/api/schemas/: __init__.py  base_schema.py  cv_job_schemas.py
backend/cv-processing-service/src/api/services/: cv_job_service.py  monitoring_service.py
backend/cv-processing-service/src/api/settings/: config.py
backend/cv-processing-service/src/api/utils/: dependencies.py
backend/cv-processing-service/src/parking_monitor/: __init__.py  main.py  vehicle_botsort_conf.yaml
backend/cv-processing-service/src/reid_and_tracking/: Config.py
backend/device-emulator-service/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/device-emulator-service/src/: db.py  main.py  models.py  schemas.py
backend/device-emulator-service/src/clients/: events_client.py
backend/device-emulator-service/src/routers/: emulator_router.py  health_router.py
backend/device-emulator-service/src/schemas/: device_events_schemas.py
backend/device-emulator-service/src/services/: emulator_service.py  event_producer.py
backend/device-emulator-service/src/settings/: config.py
backend/device-emulator-service/src/utils/: dependencies.py  deps.py
backend/notification-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/notification-service/data/: notifications.db
backend/notification-service/src/: main.py  models.py  schemas.py
backend/notification-service/src/clients/: fcm_client.py
backend/notification-service/src/routers/: health_router.py  notification_router.py
backend/notification-service/src/services/: notification_service.py
backend/notification-service/src/settings/: config.py
backend/notification-service/src/utils/: dependencies.py
backend/parking-management-service/: .env  Dockerfile  prestart.sh  pyproject.toml
backend/parking-management-service/migrations/: env.py
backend/parking-management-service/migrations/versions/: 0a6e880e868d_add_owner_id_to_vehicles.py  20260605_sergey_monitor_runtime.py  20260606_add_events_table.py  20260609_expand_events_event_type.py  20260611_add_rental_and_vehicle_profile_fields.py  54ccc166d30b_initial.py  54ccc166d30c_add_bookings_table.py  9f4d2d2a1c11_add_vehicle_block_flag.py  b7f2b9b6c1a0_add_booking_projection_table.py  cv_monitoring_integration.py
backend/parking-management-service/postgres/: Dockerfile
backend/parking-management-service/scripts/: new_seed.sql  seed_sergey_test_data.sql
backend/parking-management-service/src/: main.py
backend/parking-management-service/src/brokers/: rabbitmq.py
backend/parking-management-service/src/clients/: auth_client.py
backend/parking-management-service/src/dao/: base_dao.py  booking_dao.py  booking_projection_dao.py  cameraDAO.py  camera_dao.py  event_dao.py  parking_dao.py  spotDAO.py  spot_dao.py  vehicleDAO.py  vehicle_dao.py
backend/parking-management-service/src/database/: base.py  seed.py  session.py
backend/parking-management-service/src/models/: booking.py  booking_projection.py  cameras.py  cv_geometry.py  emulated_devices.py  parkings.py  spots.py  system_events.py  tracking.py  vehicles.py
backend/parking-management-service/src/routers/: analytics_router.py  booking_router.py  camera_router.py  cameras_router.py  events_router.py  internal_cv_router.py  mobile_compat_router.py  parking_router.py  spot_router.py  spots_router.py  tracking_router.py  vehicle_router.py  vehicles_router.py
backend/parking-management-service/src/schemas/: __init__.py  analytics_schemas.py  base_schema.py  booking_schemas.py  camera_schemas.py  common.py  events_schemas.py  parking_schemas.py  spot_schemas.py  spots_schemas.py  vehicle_schemas.py
backend/parking-management-service/src/services/: analytics_service.py  booking_projection_service.py  booking_service.py  booking_ws.py  camera_service.py  cv_event_service.py  event_service.py  parking_service.py  spot_service.py  spots_service.py  system_event_ws.py  vehicle_service.py
backend/parking-management-service/src/settings/: config.py
backend/parking-management-service/src/tests/: conftest.py
backend/parking-management-service/src/utils/: dependencies.py
mobile/: App.tsx  (+6 more)
(+135 files in other folders)
