[project]
name = "auth-service"
version = "0.1.0"
description = "Зависимости сервиса аунтентификации"
authors = [
    {name = "Den4ik",email = "kvndp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt (>=5.0.0,<6.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.0,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
