[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication and authorization service for parking system"
authors = [
    { name = "Den4ik", email = "kvndp2004@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "asyncpg>=0.31.0,<0.32.0",
    "bcrypt>=5.0.0,<6.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.129.0,<0.130.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.0,<3.0",
    "PyJWT>=2.10.1,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.46,<3.0.0",
    "uvicorn>=0.40.0,<0.41.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
