[project]
name = "cv-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Den4ik", email = "kvndp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.0,<3.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "aio-pika (>=9.4.0,<10.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
    "opencv-python-headless (>=4.9.0,<5.0.0)",
    "ultralytics (>=8.2.0,<8.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
torch = { source = "pytorch-cpu", version = "^2.6.0" }
torchvision = { source = "pytorch-cpu", version = "^0.21.0" }
