[project]
name = "notification-service"
version = "0.1.0"
description = "Mock push and notification journal for parking system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0,<0.130.0",
    "uvicorn[standard]>=0.30.0,<0.41.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27.0,<1.0.0",
    "google-auth>=2.30.0,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
