[project]
name = "parking-management-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Den4ik",email = "kvndp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi-pagination (>=0.15.10,<0.16.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
