[project]
name = "parking-management-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Den4ik",email = "kvndp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "fastapi-pagination (>=0.15.10,<0.16.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "pydantic-settings (>=2.0,<3.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
